# OmniNavBench

./: .gitignore  HowtoTestModel.md  README.md  benchtestbatch.sh  benchteststyle.sh  config.yaml  load_local_paths.sh  local_paths.env.example  omninav.python.kit  pyproject.toml  runBench.py
OmniNav/: download_assets.py  local_paths.py  login_openxlab.py  macros.py  set_assets_path.py
OmniNav/core/: gym_env.py  runner.py  vec_env.py
OmniNav/demo/: aliengo_keyboard.py  aliengo_locomotion.py  franka_manipulation.py  franka_manipulation_mocap_teleop.py  g1_locomotion.py  gr1_locomotion.py  gr1_teleop.py  h1_locomotion.py  h1_traveled_distance.py  jetbot_locomotion.py
OmniNavExt/: __init__.py
OmniNavExt/controllers/: __init__.py  aliengo_move_by_speed_controller.py  dd_controller.py  franka_mocap_teleop_controller.py  g1_move_by_speed_controller.py  go_toward_point_controller.py  gr1_move_by_speed_controller.py  gr1_teleop.py  gr1_teleop_controller.py  gripper_controller.py  h1_move_by_speed_controller.py  ik_controller.py  joint_controller.py  layout_edit_mocap_controller.py  move_along_path_points_controller.py  move_to_point_by_speed_controller.py  move_to_point_oracle_controller.py  pin_ik_solver.py  (+4 more)
bench/: __init__.py
configs/: aliengoh1_test.yaml  carter_v1_test.yaml
datagen/: __init__.py  config.py  pipeline.py
envsets/: vlnce_val_seen_1.json  vlnce_val_seen_ep1.json  vlnce_val_seen_ep4.json
tests/: conftest.py  h1_locomotion.py  rep_camera_pointcloud.py  rep_camera_pointcloud_vec.py  rep_camera_pose.py
toolkits/: generate_language_variants.py
(+328 files in other folders)
