[project]
name = "omninavbench"
version = "0.1.0"
description = "OmniNavBench: a unified general-purpose navigation benchmark across embodiments, styles, and sub-tasks."
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "torch==2.7.*",
    "numpy==1.26.*",
    "opencv-python-headless==4.11.*",
    "Pillow==10.4.*",
    "pydantic==2.11.*",
    "scipy==1.15.*",
    "gymnasium==1.2.*",
    "requests==2.32.*",
    "httpx==0.27.*",
    "flask==3.0.*",
    "huggingface-hub==1.9.*",
    "numpy-quaternion==2023.0.*",
    "tqdm==4.66.*",
    "psutil==5.9.*",
    "toml==0.10.*",
]

[tool.black]
line-length = 120
skip-string-normalization = true
force-exclude = '''
lcmtypes
'''

[tool.isort]
profile = "black"
skip_glob = '**/lcmtypes/**'
